--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,128 +8,91 @@
     tools:context=".MainActivity">
 
     <EditText
-        android:id="@+id/dateCreacion"
-        android:layout_width="207dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="19dp"
-        android:ems="10"
-        android:hint="Creación del ticket"
-        android:inputType="date"
-        app:layout_constraintBottom_toTopOf="@+id/dateFinalizacion"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />
-
-    <EditText
         android:id="@+id/txtAutor"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="46dp"
-        android:layout_marginBottom="29dp"
+        android:layout_width="153dp"
+        android:layout_height="44dp"
         android:ems="10"
         android:hint="Autor"
         android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/txtEstado"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/txtTitulo"
-        app:layout_constraintTop_toBottomOf="@+id/txtDescripcion" />
+        tools:layout_editor_absoluteX="213dp"
+        tools:layout_editor_absoluteY="147dp" />
 
     <EditText
         android:id="@+id/txtNumTicket"
-        android:layout_width="0dp"
+        android:layout_width="153dp"
         android:layout_height="0dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="72dp"
-        android:layout_marginEnd="21dp"
-        android:layout_marginBottom="29dp"
         android:ems="10"
         android:hint="Número del Ticket"
         android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/txtTitulo"
-        app:layout_constraintEnd_toStartOf="@+id/txtDescripcion"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteX="36dp"
+        tools:layout_editor_absoluteY="72dp" />
 
     <EditText
         android:id="@+id/txtTitulo"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="39dp"
-        android:layout_marginEnd="21dp"
-        android:layout_marginBottom="29dp"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
         android:ems="10"
         android:hint="Título"
         android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
-        app:layout_constraintEnd_toStartOf="@+id/txtAutor"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtNumTicket" />
+        tools:layout_editor_absoluteX="36dp"
+        tools:layout_editor_absoluteY="147dp" />
 
     <EditText
         android:id="@+id/txtEmail"
-        android:layout_width="0dp"
+        android:layout_width="152dp"
         android:layout_height="0dp"
-        android:layout_marginStart="39dp"
-        android:layout_marginEnd="21dp"
-        android:layout_marginBottom="24dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/dateCreacion"
-        app:layout_constraintEnd_toStartOf="@+id/txtEstado"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />
+        tools:layout_editor_absoluteX="36dp"
+        tools:layout_editor_absoluteY="219dp" />
 
     <EditText
         android:id="@+id/txtDescripcion"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="72dp"
-        android:layout_marginEnd="49dp"
-        android:layout_marginBottom="31dp"
+        android:layout_width="152dp"
+        android:layout_height="44dp"
         android:ems="10"
         android:hint="Descripción"
         android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/txtAutor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/txtNumTicket"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteX="214dp"
+        tools:layout_editor_absoluteY="72dp" />
 
     <EditText
         android:id="@+id/txtEstado"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="47dp"
-        android:layout_marginBottom="468dp"
+        android:layout_width="152dp"
+        android:layout_height="44dp"
         android:ems="10"
         android:hint="Estado"
         android:inputType="text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/txtEmail"
-        app:layout_constraintTop_toBottomOf="@+id/txtAutor" />
-
-    <EditText
-        android:id="@+id/dateFinalizacion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="27dp"
-        android:ems="10"
-        android:hint="Finalización del ticket"
-        android:inputType="date"
-        app:layout_constraintBottom_toTopOf="@+id/btnGuardar"
-        app:layout_constraintStart_toStartOf="@+id/dateCreacion"
-        app:layout_constraintTop_toBottomOf="@+id/dateCreacion" />
+        tools:layout_editor_absoluteX="212dp"
+        tools:layout_editor_absoluteY="219dp" />
 
     <Button
         android:id="@+id/btnGuardar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="257dp"
         android:text="Guardar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateFinalizacion" />
+        tools:layout_editor_absoluteX="147dp"
+        tools:layout_editor_absoluteY="517dp" />
+
+    <EditText
+        android:id="@+id/dateFinalizacion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Finalización del ticket"
+        android:inputType="text"
+        tools:layout_editor_absoluteX="98dp"
+        tools:layout_editor_absoluteY="340dp" />
+
+    <EditText
+        android:id="@+id/dateCreacion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Creacion del ticket"
+        android:inputType="text"
+        tools:layout_editor_absoluteX="100dp"
+        tools:layout_editor_absoluteY="420dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
