--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,90 +9,135 @@
 
     <EditText
         android:id="@+id/txtAutor"
-        android:layout_width="153dp"
-        android:layout_height="44dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="54dp"
         android:ems="10"
         android:hint="Autor"
         android:inputType="text"
-        tools:layout_editor_absoluteX="213dp"
-        tools:layout_editor_absoluteY="147dp" />
-
-    <EditText
-        android:id="@+id/txtNumTicket"
-        android:layout_width="153dp"
-        android:layout_height="0dp"
-        android:ems="10"
-        android:hint="Número del Ticket"
-        android:inputType="text"
-        tools:layout_editor_absoluteX="36dp"
-        tools:layout_editor_absoluteY="72dp" />
+        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/txtTitulo"
+        app:layout_constraintTop_toBottomOf="@+id/txtDescripcion" />
 
     <EditText
         android:id="@+id/txtTitulo"
-        android:layout_width="150dp"
+        android:layout_width="0dp"
         android:layout_height="45dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="39dp"
         android:ems="10"
         android:hint="Título"
         android:inputType="text"
-        tools:layout_editor_absoluteX="36dp"
-        tools:layout_editor_absoluteY="147dp" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/txtAutor"
+        app:layout_constraintEnd_toStartOf="@+id/txtAutor"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/txtNumTicket"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="37dp"
+        android:ems="10"
+        android:hint="Número del Ticket"
+        android:inputType="text"
+        app:layout_constraintBottom_toBottomOf="@+id/txtDescripcion"
+        app:layout_constraintEnd_toStartOf="@+id/txtDescripcion"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/txtDescripcion" />
 
     <EditText
         android:id="@+id/txtEmail"
-        android:layout_width="152dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginBottom="48dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="text"
-        tools:layout_editor_absoluteX="36dp"
-        tools:layout_editor_absoluteY="219dp" />
+        app:layout_constraintBottom_toTopOf="@+id/dateCreacion"
+        app:layout_constraintEnd_toStartOf="@+id/txtEstado"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtAutor" />
 
     <EditText
         android:id="@+id/txtDescripcion"
-        android:layout_width="152dp"
-        android:layout_height="44dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="41dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="26dp"
         android:ems="10"
         android:hint="Descripción"
         android:inputType="text"
-        tools:layout_editor_absoluteX="214dp"
-        tools:layout_editor_absoluteY="72dp" />
+        app:layout_constraintBottom_toTopOf="@+id/txtAutor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/txtNumTicket"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/txtEstado"
-        android:layout_width="152dp"
-        android:layout_height="44dp"
+        android:layout_width="0dp"
+        android:layout_height="46dp"
+        android:layout_marginEnd="44dp"
         android:ems="10"
         android:hint="Estado"
         android:inputType="text"
-        tools:layout_editor_absoluteX="212dp"
-        tools:layout_editor_absoluteY="219dp" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/txtEmail"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/txtEmail" />
 
     <Button
         android:id="@+id/btnGuardar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
         android:text="Guardar"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="517dp" />
+        app:layout_constraintBottom_toTopOf="@+id/rcvTickets"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dateCreacion" />
 
     <EditText
         android:id="@+id/dateFinalizacion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="20dp"
         android:ems="10"
         android:hint="Finalización del ticket"
         android:inputType="text"
-        tools:layout_editor_absoluteX="98dp"
-        tools:layout_editor_absoluteY="340dp" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/dateCreacion"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/dateCreacion" />
 
     <EditText
         android:id="@+id/dateCreacion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginBottom="40dp"
         android:ems="10"
         android:hint="Creacion del ticket"
         android:inputType="text"
-        tools:layout_editor_absoluteX="100dp"
-        tools:layout_editor_absoluteY="420dp" />
+        app:layout_constraintBottom_toTopOf="@+id/btnGuardar"
+        app:layout_constraintEnd_toStartOf="@+id/dateFinalizacion"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcvTickets"
+        android:layout_width="407dp"
+        android:layout_height="294dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnGuardar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
